adding comments